# DocArray-Mnist

./: .gitignore  README.md  pyproject.toml
DocArray_mnist/: Model.py  README.md  main.py  process.py
