[tool.poetry]
name = "docarray-mnist"
version = "0.1.0"
description = "A sample project to test out DocArray using Mnist dataset"
authors = ["sanjay <44315700+sanjumsanthosh@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "docarray_mnist"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
icecream = "^2.1.3"
docarray = {extras = ["hnswlib"], version = "^0.40.0"}
tqdm = "^4.66.1"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
gradio = "^4.13.0"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gradio = "DocArray_mnist.main:main"


